<resources>
    <string name="app_name" translatable="false">LaureApp</string>
    <string name="me" translatable="false">stringa di prova per github</string>
    <string name="non_sei_registrato">Non sei registrato?</string>
    <string name="oppure">o</string>
    <string name="continua_come_ospite">Continua come ospite</string>
    <string name="registrati">Registrati</string>
    <string name="mail_docente" translatable="false">\@uniba.it</string>
    <string name="mail_studente" translatable="false">\@studenti.uniba.it</string>
    <string name="conferma_password">Conferma password</string>
    <string name="avanti">Avanti</string>
    <string name="seleziona_corso_di_studi">Seleziona\ncorso di studi</string>
    <string name="messaggio_primo_accesso_studente">Puoi modificare le tue informazioni in ogni istante andando nelle impostazioni del tuo profilo</string>
    <string name="conferma">Conferma</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="compilativa">compilativa</string>
    <string name="Non_consegnato">Non consegnato</string>
    <string name="relatore">Relatore</string>
    <string name="descrizione">Descrizione</string>
    <string name="consegna_tesi">Consegna tesi</string>
    <string name="dipartimento">Dipartimento</string>
    <string name="corso">Corso</string>
    <string name="insegnamento">Insegnamento</string>

    <string name="faq">QeA</string>
    <string name="dettagli">Dettagli</string>
    <string name="task" translatable="false">Task</string>
    <string name="la_tua_tesi">La tua tesi</string>
    <string name="tesi_preferite">Tesi preferite</string>
    <string name="corelatore">Co-relatore</string>
    <string name="immagine_di_stato_tesi">immagine di stato tesi</string>
    <string name="richiedi_ricevimento">Richiedi ricevimento inviando un\'email</string>
    <string name="da_completare">Da completare</string>
    <string name="in_lavorazione">In lavorazione</string>
    <string name="completato">Completato</string>
    <string name="richiedi">Richiedi</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="invia">Invia</string>
    <string name="scrivi_domanda">Testo della domanda</string>
    <string name="cerca_tesi">Cerca tesi</string>
    <string name="scan_qr">Scansiona QR</string>
    <string name="filtra_tesi">Filtra tesi</string>
    <string name="titolo_tesi">Titolo tesi...</string>
    <string name="accedi">Accedi</string>
    <string name="seleziona_insegnamenti">Inserisci i tuoi insegnamenti</string>
    <string name="indicazioni_primo_accesso_doc">Seleziona ed inserisci i tuoi insegnamenti. puoi modificare in futuro queste  informazioni da tuo profilo</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="insegnamenti_mancanti_avviso">Devi aggiungere almeno un\'insegnamento</string>
    <string name="home" translatable="false">Home</string>
    <string name="media_consigliata">Media voti consigliata</string>
    <string name="tempo_richiesto">Tempo richiesto</string>
    <string name="ore">Ore</string>
    <string name="esami_richiesti">Esami richiesti</string>
    <string name="studente_assegnato">Studente assegnato</string>
    <string name="Condividi">Condividi</string>
    <string name="Elimina">Elimina</string>
    <string name="no_connessione_internet" translatable="false">OOPS!\nNessuna connessione ad Internet</string>
    <string name="riprova">Riprova</string>
    <string name="Ricevimento">Ricevimento</string>
    <string name="archivia">Archivia</string>
    <string name="rispondi">Rispondi</string>
    <string name="elimina">Elimina</string>
    <string name="richieste">Richieste</string>
    <string name="propedeuticita">Propedeuticità</string>
    <string name="note_per_il_docente">Note per il docente</string>
    <string name="rifiuta">Rifiuta</string>
    <string name="accetta">Accetta</string>
    <string name="aggiungi_task">Aggiungi task</string>
    <string name="descrizione_guida_task">"Aggiungi dei task alla tesi, potrai modificarli o eliminarli nella schermata di dettaglio della tesi. "</string>
    <string name="oggetto_del_task">Oggetto del task</string>
    <string name="il_tuo_corso">Il tuo corso</string>
    <string name="cambia_corso">Cambia corso</string>
    <string name="il_tuo_account">Il tuo account</string>
    <string name="cambia_password">Cambia password</string>
    <string name="elimina_profilo">"Elimina profilo "</string>
    <string name="logout">Esci</string>
    <string name="descrizione_cambio_pw">Modifica la tua password attuale</string>
    <string name="descrizione_elimina_profl">Eliminando il profilo eliminerai tutti i tuoi dati e i tuoi progressi fatti finora</string>
    <string name="desc_cambio_corso">Cambiando il corso di laurea ti verranno mostrate le tesi disponibili solo per questo corso</string>
    <string name="descrizione_esci">Uscirai dal tuo profilo, per accedere nuovamente dovrai reinserire le tue credenziali</string>
    <string name="profilo">Profilo</string>
    <string name="cambio_corso">Cambio password</string>
    <string name="salva">Salva</string>
    <string name="password">Password</string>
    <string name="password_attuale">Password attuale</string>
    <string name="password_cambiata">Password cambiata con successo</string>
    <string name="no_tesi_trovate">Non sono state ancora caricate tesi per il tuo corso di laurea</string>
    <string name="salva_tesi">Salva tesi</string>
    <string name="crea_task">Crea task</string>
    <string name="descrizione_no_tesi_assegnata">"Ancora non ti è stata assegnata una tesi, attendi \nl’approvazioni di un relatore oppure cerca una tesi "</string>
    <string name="dettaglio_tesi">Dettaglio tesi</string>
    <string name="tipologia_tesi">Tipologia tesi</string>
    <string name="richiedi_tesi">Richiedi tesi</string>
    <string name="votazione_consigliata">"Votazione consigliata: "</string>
    <string name="invia_email">Invia email</string>
    <string name="teasi_preferita_aggiunta">Tesi aggiunta nei preferiti</string>
    <string name="Mostra_qr">Mostra QR</string>
    <string name="Condividi_tesi">Condividi tesi</string>
    <string name="condividi_con">Condividi con</string>
    <string name="scansiona_qr">Scansiona il QR</string>
    <string name="inserisci_info">Inserisci le tue informazioni</string>
    <string name="seleziona_esami_convalidati">Seleziona quali tra questi esami hai già convalidato</string>
    <string name="media_voti_attuale">Media voti attuale</string>
    <string name="numero_di_esami_alla_laurea">Numero di esami alla laurea</string>
    <string name="tesi_no_preferiti">Tesi eliminata dai preferiti</string>
    <string name="txt_no_tesi_preferite">Non hai nessuna tesi preferita</string>
    <string name="campi_richiesta_mancanti">Devi inserire la media dei tuoi voti \ne il numero di esami alla laurea</string>
    <string name="richiesta_inviata">Richiesta inviata</string>
    <string name="tesi_assegnata">Tesi assegnata</string>
    <string name="no_richieste">Non ci sono richieste da soddisfare</string>
    <string name="task_da_completare">Task da svolgere</string>
    <string name="ultima_modifica">Ultima modifica</string>
    <string name="inserisci_qui_domanda_task">inserisci qui una domanda da fare al tuo relatore riguardo un task</string>
    <string name="seleziona_task">Seleziona task</string>
    <string name="invia_a">Invia a</string>
    <string name="domanda_inviata">Domanda inviata correttamente</string>
    <string name="errore_domanda_inviata">DOmanda non inviata. Riprova</string>
    <string name="no_domande_presenti">Non ci sono domande da visualizzare</string>
    <string name="attendi_la_revisione">Attendi la revisione ...</string>
    <string name="invia_risposta">Invia risposta</string>
    <string name="approva">Approva tesi</string>
    <string name="respingi">Respingi tesi</string>
    <string name="scarica">Scarica</string>
    <string name="contatta">Contatta</string>
    <string name="risposto_il">Risposto il</string>
    <string name="testo_ricevimento">Inserisci qui l\'argomento del ricevmiento</string>
    <string name="aggiungi_una_descrizione">Aggiungi una descrizione</string>
    <string name="ricevimento">Ricevimento</string>
    <string name="errore">Errore. Riprova</string>
    <string name="richiesta_da">Richiesta da</string>
    <string name="inserisci_email_valida">Inserisci un\'email valida</string>
    <string name="istruzioni_filtraggio">Cerca le tesi che soddisfano le tue esigenze.\nImposta i valori che ti interessano</string>
    <string name="ore_di_lavoro">Ore di lavoro massime</string>
    <string name="applica_filtri">Applica filtri</string>
    <string name="elimina_filtri">Elimina filtri</string>
    <string name="task_completato">Task completato</string>
    <string name="download_file">Scarica tesi</string>
    <string name="richiesta_permesso">Richiesto il permesso all\'accesso alla fotocamera</string>
    <string name="testo_permesso_camera"><![CDATA[Di seguito ti verra richiesto l\'accesso alla fotocamera per poter scannerrizare il codice QR.\nSe non concedi questo permesso non è possibile vedere i dati della relativa tesi, ma potresti comunque ricevere le informazioni della tesi facendoti condividere le informazioni in modo testuale, andando in:\nCondivisione->Condividi tesi]]></string>
    <string name="testo_permesso_camera_in_impostazioni">Per utilizzare questa funzionalità devi concedere i permessi per l\'accesso alla fotocamera. Puoi fare questo andando nelle impostazioni del dispositivo, apri LaureeApp e concedi i permessi per la fotocamera</string>
    <string name="annulla">Annulla</string>
    <string name="grazie">Grazie</string>
    <string name="torna_indietro">Torna indietro</string>
    <string name="loggati">Devi registrarti nel sistema per usare questa funzione</string>
    <string name="password_non_combaciano">Le password non combaciano</string>
    <string name="inserisci_cognome">Inserisci il cognome</string>
    <string name="inserisci_nome">Inserisci un nome</string>


    <string-array name="numbers"> <!--è solo un array di prova inutile,serve per dimostrare il funzionamento dello spinner-->
        <item>elemento 1</item>
        <item>elemento 2</item>
        <item>HJSYBH</item>
        <item>elemento 4</item>
        <item>elemento 5</item>>
        <item>elemento 1</item>
        <item>elemento 2</item>
        <item>elemento 3</item>
        <item>elemento 4</item>
        <item>elemento 5</item>>
        <item>elemento 1</item>
        <item>elemento 2</item>
    </string-array>


</resources>