<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ricevimento"
        android:textSize="30sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/richiamo_azione"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/testo_ricevimento"/>

    <EditText
        android:id="@+id/edt_descrizione"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="top"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/aggiungi_una_descrizione" />

    <Button
        android:id="@+id/btn_richiedi_ricevimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/invia"
        android:backgroundTint="@color/richiamo_azione"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

</LinearLayout>