<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_item"
        android:icon="@drawable/ic_cerca"
        android:title="@string/cerca_tesi"
        android:iconTint="@color/richiamo_azione"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/scan_qr"
        android:icon="@drawable/qr_code_scanner"
        android:title="@string/scan_qr"
        android:iconTint="@color/richiamo_azione"
        app:showAsAction="always"/>

    <item
        android:id="@+id/filtra"
        android:icon="@drawable/ic_filtra"
        android:title="@string/filtra_tesi"
        android:iconTint="@color/richiamo_azione"
        app:showAsAction="always"/>


</menu>