<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/lyt_radice"
    android:padding="15dp"
   >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inserisci_info"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"
        android:textColor="@color/black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/seleziona_esami_convalidati"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/lyt_contenitore_esami"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/media_voti_attuale"/>

        <EditText
            android:id="@+id/edt_media_voti"
            android:layout_width="70dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/numero_di_esami_alla_laurea"/>

        <EditText
            android:id="@+id/edt_num_esami_mancanti"
            android:layout_width="70dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_note"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_per_il_docente"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_invia_info"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/richiamo_azione"
        android:text="@string/invia"
        android:layout_gravity="center"
        android:textSize="18sp"
        />

</LinearLayout>