<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityPrimoAccessoLogin">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tlb_corso_stud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title=" "/>

    <TextView
        android:id="@+id/txt_seleziona_corso_per_studente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_marginStart="@dimen/margine_bordi_laterali"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/coloreTestoPrimario"
        android:text="@string/seleziona_corso_di_studi"/>

    <LinearLayout
        android:id="@+id/contenitore1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margine_bordi_laterali"
        android:layout_marginEnd="@dimen/margine_bordi_laterali"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_messaggio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messaggio_primo_accesso_studente"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/dipartimento"
            android:textColor="#616161"
            />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:background="@drawable/rettangolo_spinner"
            android:spinnerMode="dialog"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/corso"
            android:textColor="#616161"
            />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:background="@drawable/rettangolo_spinner"
            android:spinnerMode="dialog"/>

        <TextView
            android:id="@+id/txt_insegnamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/insegnamento"
            android:visibility="gone"
            android:textColor="#616161"
            />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:background="@drawable/rettangolo_spinner"
            android:visibility="gone"
            android:spinnerMode="dialog"/>



    </LinearLayout>

    <Button
        android:id="@+id/btn_conferma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margine_bordi_laterali"
        android:layout_marginEnd="@dimen/margine_bordi_laterali"
        android:backgroundTint="@color/richiamo_azione"
        android:text="@string/conferma"
        android:textSize="19sp"
        android:layout_marginTop="40dp"/>


</LinearLayout>